config: eslint를 설정한다.
- 정의되지 않은 함수, 변수를 컴파일 과정에서 에러가 발생하게 구현한다.
- test.tsx 파일을 통해서 lint 규칙이 적용이 되었는지 확인

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:debug": "eslint ./src --ext .ts,.tsx --debug"
   },
   "dependencies": {
     "react": "^19.0.0",
