--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "axios": "^1.9.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "stylelint": "^16.19.1",
+    "react-hook-form": "^7.56.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
